fix(design): colors and code block visibility

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,27 +6,35 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #006464;
-  --ifm-color-primary-dark: #005a5a;
-  --ifm-color-primary-darker: #005555;
-  --ifm-color-primary-darkest: #004646;
-  --ifm-color-primary-light: #006e6e;
-  --ifm-color-primary-lighter: #007373;
-  --ifm-color-primary-lightest: #008282;
+  --ifm-color-primary: #0c6ccd;
+  --ifm-color-primary-dark: #0b61b9;
+  --ifm-color-primary-darker: #0a5cae;
+  --ifm-color-primary-darkest: #084c90;
+  --ifm-color-primary-light: #0d77e2;
+  --ifm-color-primary-lighter: #0e7cec;
+  --ifm-color-primary-lightest: #288df2;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(0 0 0 / 5%);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #00ffff;
-  --ifm-color-primary-dark: #00e5e6;
-  --ifm-color-primary-darker: #00d9d9;
-  --ifm-color-primary-darkest: #00b2b3;
-  --ifm-color-primary-light: #1affff;
-  --ifm-color-primary-lighter: #26ffff;
-  --ifm-color-primary-lightest: #4dffff;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #72bcf3;
+  --ifm-color-primary-dark: #51acf0;
+  --ifm-color-primary-darker: #41a5ef;
+  --ifm-color-primary-darkest: #148ce6;
+  --ifm-color-primary-light: #93ccf6;
+  --ifm-color-primary-lighter: #a3d3f7;
+  --ifm-color-primary-lightest: #d5ebfb;
+  --docusaurus-highlighted-code-line-bg: rgba(255 255 255 / 5%);
+}
+
+.theme-code-block {
+  box-shadow: 0 0 0 1px rgba(255 255 255 / 15%);
+
+  [data-theme='light'] & {
+  box-shadow: 0 0 0 1px rgba(0 0 0 / 15%);
+  }
 }
 
 code:not([style]) > .code-block {
